# tracery-ai

./: .gitignore  README.md  ebnf_generator.py  example.json  example.lark  grammar_examples.py  guidance_gen.py  hist.py  hist.txt  hist2.txt  huggingface_logits.py  llama_grammar_gen.py  main.py  openai_gen.py  pyproject.toml  tracery_to_ebnf_gbnf.py  tracery_to_ebnf_lark.py  xgr.py
grammars/: example.gbnf  test.json  test2.json  test3.json  test4.json
